tests/fixtures/invalid/pow_float_str_float.py
# Cannot call pow() with Float, Str, Float
x = pow(1.0, "hello", 1.0)
